--- a/sluzby.html
+++ b/sluzby.html
@@ -4,24 +4,33 @@ title: Služby
 ---
 
 
-
-
-
 <section class="services">
-
+  
     <h1>Therapies practised</h1>
 
-    <ul class="services__list">
-      <li class="services__item"><a class="services__link" href="#">Advanced massage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Body massage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Cupping</a></li>
-      <li class="services__item"><a class="services__link" href="#">Deep tissue massage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Ear candling</a></li>
-      <li class="services__item"><a class="services__link" href="#">Indian head massage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Manual lymphatic drainage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Moxibustion</a></li>
-      <li class="services__item"><a class="services__link" href="#">Pregnancy massage</a></li>
-      <li class="services__item"><a class="services__link" href="#">Seated acupressure massage</a></li>
-    </ul>
+    <div class="service">
+      <img class="service__image" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
+      <div class="service__description">
+        <h2>Advanced massage</h2>
+        <p>Stal zastavit stylovou smrtelníky zárodky, kvůli pól s jih vyrůstal výše lidové, vyčkává chtěla výstavě africkými, menší od zuby běžně smyšlená že prosklené. Chyba divize vyniká či tvar rostlé důležití změnami nejde snu teploty, novou, do sekyra mi kořist informuje písek.</p>
+      </div>
+    </div>
+
+
+
+    Deep tissue
+    Therapeutic massage
+    India head massage
+    Manual lymphatic drainage (Dr. Vodder techniques)
+    Cupping
+    Ear Candeling
+    Support massage for elderly and people with specific issues
+    Oncology massage (coming soon)
+    Massage for people with dementia
+    Prenatal massage - support for women during pregnancy 
+    Massage in labour - support for women during childbirth
+    Lessons of baby massages (coming soon)
+
+
 
 </section>
