--- a/onas.html
+++ b/onas.html
@@ -3,25 +3,23 @@ layout: moje-sablona.njk
 title: O nás
 ---
 
+<section class="about">
+  <div class="about__image">
+  </div>
+  
+  <div class="about__content">
+    <h1>O mně</h1>
 
-<h1>About me</h1>
+    <p> Ahoj, jmenuji se Jaroslava a jsem mobilní certifikovaný masér poskytující služby v Londýně.</p>
 
-    <p>
-      Hi. I am Jara, a mobile massage therapist based in London.
-    </p>
+    <p>Mám mnoho zkušeností ve zdravonickém oboru. Již 9 let masíruji jednak jako mobilní terapeut, jednak pracuji v masérských agenturách, spa centrech, charitách a v domovech pro seniory.</p>
 
-    <p>
-      My background is in healthcare. I have practiced complementary therapy for 9 years, building experiences by working with mobile massage agencies, spas, charities as well as in elderly units.
-    </p>
+    <p>Baví mě věnovat se klientům různých věkových skupin s rozličnými problémy.</p>
 
-    <p>
-      It is my passion to support clients of different ages with a variety of challenges, without excluding anybody.
-    </p>
+    <p>Občas nabízím své služby charitám nebo během sportovních událostí jako je Londýnský maraton, Růžová Duha, 10km Britský běh.</p>
 
-    <p>
-    From time to time, I offer my skills to charities on sport events like London Marathon, Pink Rainbow, 10km British Run.
-    </p>
+    <p>Věřím, že každý je jedinečný. Tak mi o sobě řekněte a můžeme spolu navrhnout masáž právě pro Vás. Těším se na brzké shledání.</p>
+  </div>
 
-    <p>
-    I believe that everyone is original so tell me your story and we can create a right treatment for you. I'm looking forward to seeing you soon.
-    </p>
+
+</section>
