Záložky bez responsive a bez EN

--- a/cenik.html
+++ b/cenik.html
@@ -59,7 +59,7 @@ title: Ceník
         </table>
     
 
-        <p>Brzy budu nabízet i kurzy masáží novorozeňat, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
+        <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
           
     </div>
 </section>
