--- a/sluzby.html
+++ b/sluzby.html
@@ -8,29 +8,71 @@ title: Služby
   
     <h1>Therapies practised</h1>
 
-    <div class="service">
-      <img class="service__image" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
-      <div class="service__description">
-        <h2>Advanced massage</h2>
-        <p>Stal zastavit stylovou smrtelníky zárodky, kvůli pól s jih vyrůstal výše lidové, vyčkává chtěla výstavě africkými, menší od zuby běžně smyšlená že prosklené. Chyba divize vyniká či tvar rostlé důležití změnami nejde snu teploty, novou, do sekyra mi kořist informuje písek.</p>
+    <div class="service grid">
+      <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
+      <div class="service__description--right">
+        <h2>Deep tissue</h2>
+        <p>Deep tissue massage is suitable for all people with problems with mustles of the whole body.</p>
+        <p>One of the most common reasons for people to have a deep tissue massage is the general aches and pains that fall under the broad definition of rheumatic pains, aching joints and muscle spasms.
+        <p>The main underlying cause of many symptoms manifested in the body is stress. </p>
+      </div>
+    </div>
+
+    <div class="service grid">
+      <img class="service__image--right" src="/Images/Downloaded/wellness-3688169_1920.jpg" alt="Masáž 2">
+      <div class="service__description--left">
+        <h2>Therapeutic massage</h2>
+        <p>Therapeutic massage can help to relieve stress, insomnia, tense muscles and back pain, and is believed by many to improve circulation and digestion, tone the skin and help eliminate toxins.</p>
+        <p>Music may also be used as an aid to achieving a relaxing treatment.</p>
+        <p>It is recommended for your body, mind and spirit.</p>
+      </div>
+    </div>
+
+    <div class="service grid">
+      <img class="service__image--left" src="/Images/Jaras/Neck_massage.jpg" alt="Masáž 3">
+      <div class="service__description--right">
+        <h2>India head massage</h2>
+        <p>It is a great stress buster, and although we call it a head massage, we incorporate the back, shoulders and arms.</p>
+        <p>This treatment is good for corporate clients as it is non-invasive and you do not need to remove any clothing.</p>
+        <p>The physical benefits that can be gained: Ease tight muscles, releases shoulders, therefore improving posture.</p>
+      </div>
+    </div>
+
+    <div class="service grid">
+      <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Masáž 4">
+      <div class="service__description--left">
+        <h2>Manual lymphatic drainage</h2>
+        <p>This massage is based on Dr. Vodder techniques. Lymphatic drainage massages can benefit people with lymphedema, fibromyalgia, and other conditions.</p>
+        <p>It is a form of gentle massage that encourages the movement of lymph fluids around the body.</p>
+        <p>The fluid in the lymphatic system helps remove waste and toxins from the bodily tissues.</p>
+      </div>
+    </div>
+
+    <div class="service grid">
+      <img class="service__image--left" src="/Images/Downloaded/massage-3710210_1920.jpg" alt="Masáž 5">
+      <div class="service__description--right">
+        <h2>Cupping</h2>
+        <p>Cupping therapy might be trendy now, but it’s not new. It dates back to ancient Egyptian, Chinese, and Middle Eastern cultures.</p>
+        <p>There are different methods of cupping, including: dry and wet.</p>
+        <p>Cupping therapy is an ancient form of alternative medicine in which a therapist puts special cups on your skin for a few minutes to create suction.</p>
       </div>
     </div>
 
 
-
-    Deep tissue
-    Therapeutic massage
-    India head massage
-    Manual lymphatic drainage (Dr. Vodder techniques)
-    Cupping
-    Ear Candeling
-    Support massage for elderly and people with specific issues
-    Oncology massage (coming soon)
-    Massage for people with dementia
-    Prenatal massage - support for women during pregnancy 
-    Massage in labour - support for women during childbirth
-    Lessons of baby massages (coming soon)
-
-
+    <h2>Other</h2>
+    <p>I offer many other services such as: </p>
+    
+    <ul class="other-services">
+      <li>Ear Candeling</li>
+      <li>Support massage for elderly and people with specific issues</li>
+      <li>Oncology massage (coming soon)</li>
+      <li>Massage for people with dementia</li>
+      <li>Prenatal massage - support for women during pregnancy</li>
+      <li>Massage in labour - support for women during childbirth</li>
+      <li>Lessons of baby massages (coming soon)</li>
+    </ul>
 
 </section>
+
+
+
