--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: St. Rafael Revival massages
 
           <p>Jsem mobilní certikovaná masérka, která poskytuje zdravotní, sportovní či těhotenské masáže přizpůsobené Vašim konkrétním potřebám a přáním.</p>
 
-          <p>Brzy budu nabízet i kurzy masáží novorozeňat, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
+          <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
           
           <p>10% z každé ceny masáže daruji na charitu. Výběr charity je zatím v procesu a bude brzy upřesněna.</p>
         </div>
@@ -23,7 +23,7 @@ title: St. Rafael Revival massages
           <h1>Hodnocení klientů</h1>
 
           <p>Těší mě, když jsou moji klienti s masážemi spokojeni. Výběr z recenzí si můžete přečíst níže.</p>
-        <div class="testimonials__grid">
+        <div class="testimonials grid">
           <div class="testimonials__selection">
             <p class="testimonials__name">Augustína V.</p>
             <p>Jaroslava mi vždy udělá úžasnou masáž zad a ramenou. Léta se k ní vracím a vždy jsem naprosto spokojená.</p>
