--- a/omne.html
+++ b/omne.html
@@ -1,6 +1,6 @@
 ---
 layout: moje-sablona.njk
-title: O nás
+title: O mně
 ---
 
 <section class="about">
@@ -21,5 +21,5 @@ title: O nás
     <p>Věřím, že každý je jedinečný. Tak mi o sobě řekněte a můžeme spolu navrhnout masáž právě pro Vás. Těším se na brzké shledání.</p>
   </div>
 
-
 </section>
+
