--- a/omne.html
+++ b/omne.html
@@ -3,7 +3,7 @@ layout: moje-sablona.njk
 title: O mně
 ---
 
-<section class="about">
+<section class="about grid">
   <div class="about__image">
   </div>
   
