--- a/cenik.html
+++ b/cenik.html
@@ -43,23 +43,15 @@ title: Ceník
             </tr>
 
             <tr>
-                <td>30 min</td>
-                <td class="pricing__price">35 £</td>
-            </tr>
-
-            <tr>
                 <td>60 min</td>
                 <td class="pricing__price">65 £</td>
-            </tr>
-
-            <tr>
-                <td>120 min</td>
-                <td class="pricing__price">120 £</td>
             </tr>
         </table>
     
 
         <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
           
+        <p class="pricing__special-info">Je možné zakoupit i dárkové poukazy na libovolnou délku masáže či terapie.</p>
+        <p class="pricing__special-info">Platby je možné provádět bankovním převodem, v hotovosti, kreditní kartou, prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a></p>
     </div>
 </section>
