--- a/kontakt.html
+++ b/kontakt.html
@@ -15,24 +15,42 @@ title: Kontakt
 <section class="contact">
     <div class="contact__info grid">
         <div class="contact__title">
-            <h1>Telefon</h1>
+            <h2>Telefon</h2>
             <p>+44 739 200 48 73</p>
         </div>
 
 
         <div class="contact__title">
-            <h1>E-mail</h1>
+            <h2>E-mail</h2>
             <p><a href="mailto:jaroslavad26@gmail.com">jaroslavad26@gmail.com</a></p>
         </div> 
     
         <div class="contact__title">
-            <h1>Adresa</h1>
+            <h2>Adresa</h2>
             <p>Londýn<br>
             SW1P 4PT<br>
             Velká Británie
             </p>
        </div>
     </div>
-</section>
+
 
 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2486.9061486288088!2d-0.13165824850390334!3d51.48972796971587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604e61c71924b%3A0x31a756f43d27f8d9!2sPonsonby%20Pl%2C%20London%20SW1P%204PT%2C%20Velk%C3%A1%20Brit%C3%A1nie!5e0!3m2!1scs!2scz!4v1638703189088!5m2!1scs!2scz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+    <div class="contact__info grid">
+        <div class="contact__title">
+            <h2>Číslo bankovního účtu</h2>
+            <p>1574096018/3030</p>
+        </div>
+
+        <div class="contact__title">
+            <h2>Dále přijímáme platby</h2>
+            <p>V hotovosti</p>
+            <p>Kreditní kartou</p>
+            <p>PayPal</p>
+            <p>Monzo</p>
+        </div>
+
+    </div>
+</section>
