--- a/cenik.html
+++ b/cenik.html
@@ -50,8 +50,45 @@ title: Ceník
     
 
         <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
-          
+    </div>  
+
+    <div class="pricing">
+        <h1>Cena skupinových masáží</h1>
+
+        <table class="pricing__massages">
+            <tr>
+                <th>Doba masáže</th>
+                <th class="pricing__price">Cena</th>
+            </tr>
+
+            <tr>
+                <td>60 min</td>
+                <td class="pricing__price">60 £</td>
+            </tr>
+
+            <tr>
+                <td>90 min</td>
+                <td class="pricing__price">90 £</td>
+            </tr>
+
+            <tr>
+                <td>120 min</td>
+                <td class="pricing__price">120 £</td>
+            </tr>
+
+            <tr>
+                <td>150 min</td>
+                <td class="pricing__price">150 £</td>
+            </tr>
+        </table>
+
+        <p>Pro firmy či skupiny nabízím masáže přímo u Vás či ve Vaší kanceláři. Masáž se provádí v sedě na židli a každé osobě se věnuji 15 - 20 minut. Minimální doba masírování pro rezervaci je 1 hodina. Hodí se např. na narozeninové oslavy, zásnubní oslavy, rozlučky se svobodou.</p>
+
+    </div>
+
         <p class="pricing__special-info">Je možné zakoupit i dárkové poukazy na libovolnou délku masáže či terapie.</p>
         <p class="pricing__special-info">Platby je možné provádět bankovním převodem, v hotovosti, kreditní kartou, prostřednictívm PayPal i Monzo. Informace ohledně bankovního převodu najdete v sekci <a class="pricing__link" href="/kontakt/">Kontakt.</a></p>
-    </div>
+  
+
+
 </section>
