--- a/index.html
+++ b/index.html
@@ -24,19 +24,54 @@ title: St. Rafael Revival massages
 
           <p>Těší mě, když jsou moji klienti s masážemi spokojeni. Výběr z recenzí si můžete přečíst níže.</p>
         <div class="testimonials grid">
+
+          <div class="testimonials__selection">
+            <p class="testimonials__name">Malika S.</p>
+            <p>Jara is neat and skilled. I had a 90 minute massage and it felt relaxing . She is thorough and very good at making sure the pressure feels just right.</p>
+          </div>
+
           <div class="testimonials__selection">
             <p class="testimonials__name">Augustína V.</p>
             <p>Jaroslava mi vždy udělá úžasnou masáž zad a ramenou. Léta se k ní vracím a vždy jsem naprosto spokojená.</p>
           </div>
 
           <div class="testimonials__selection">
-            <p class="testimonials__name">Juraj D.</p>
-            <p>Skvělá masáž od Slávky. Ještě několik dní po masáži jsem se cítil lépe. Nemohu si ji vynachválit a rozhodně ji všem doporučuji.</p>
+            <p class="testimonials__name">Maarta C.</p>
+            <p>Got to know her through a friend who has been saying wonderful things. For years I struggle with backpain, and after only one session, the change is so noticeable. Giving massage with a great care, she listens to body language, adjusting her strengths. Peaceful and healing effects. Magic hands, we like to say. Absolutely wonderful woman, proffesional attitude, great care of higene during Covid. It's a pleasure to invite this woman into your home.</p>
           </div>
-
-          <div class="testimonials__selection">
-            <p class="testimonials__name">Vanessa A.</p>
-            <p>Jaroslavu mi doporučila kamarádka a byla to dobrá volba. Slávka masíruje s velkou péčí, chová se velmi profesionálně a pomohla mi ulevit od bolesti zad.</p>
-          </div>
+        
+        <div class="testimonials__selection">
+          <p class="testimonials__name">Emma M.</p>
+          <p>Slava is truly excellent! Highly recommend her specially her lymphatic drainage and pregnancy massages!</p>
         </div>
+
+      <div class="testimonials__selection">
+        <p class="testimonials__name">Malika S.</p>
+        <p>Jara is a complete professional who regularly gives me a really good sports massage. I recommend her highly to all those who are looking for one.</p>
+      </div>
+
+      <div class="testimonials__selection">
+        <p class="testimonials__name">Jana E.</p>
+        <p>I had a massage by Jaroslava through Muscle Whisperer campaign. A friend suggested it and I couldn’t be more grateful. Jaroslava has magic hands which really help my back spasms as well as the rest of the body. Absolutely rejuvenating experience. Would definitely recommend.</p>
+      </div>
+
+      <div class="testimonials__selection">
+        <p class="testimonials__name">Natasha K.</p>
+        <p>Friendly service. Fantastic quality. Amazing massage. Great value for money.</p>
+      </div>
+
+      <div class="testimonials__selection">
+        <p class="testimonials__name">Danielle A.</p>
+        <p>Lovely massage everytime. Thank you. Would highly recommend.</p>
+      </div>
+
+      <div class="testimonials__selection">
+        <p class="testimonials__name">Edita K.</p>
+        <p>As always - very good treatment, Jara has been very thorough, caring and professional. She has been our therapist for almost 3 years. Thank you very much!</p>
+      </div>
+
+
+
+  </div>
+
       </section>
