--- a/omne.html
+++ b/omne.html
@@ -10,9 +10,9 @@ title: O mně
   <div class="about__content">
     <h1>O mně</h1>
 
-    <p> Ahoj, jmenuji se Jaroslava a jsem mobilní certifikovaný masér poskytující služby v Londýně.</p>
+    <p> Ahoj, jmenuji se Jaroslava a jsem mobilní certifikovaný masér (Diplom ITEC, BTEC) poskytující služby v Londýně. Zároveň jsem členem federace FHT (Federation of Holistic Therapists) a CNHC (Complementary and Natural Healthcare Council).</p>
 
-    <p>Mám mnoho zkušeností ve zdravonickém oboru. Již 9 let masíruji jednak jako mobilní terapeut, jednak pracuji v masérských agenturách, spa centrech, charitách a v domovech pro seniory.</p>
+    <p>Již 9 let masíruji jednak jako mobilní terapeut, jednak pracuji v masérských agenturách, spa centrech, charitách a v domovech pro seniory. Mám za sebou řadu zkušeností ze zdravotnických zařízení.</p>
 
     <p>Baví mě věnovat se klientům různých věkových skupin s rozličnými problémy.</p>
 
