pokus o glide a EN

--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -1,5 +1,5 @@
 ---
-layout: moje-sablona_CZ.njk
+layout: moje-sablona_EN.njk
 title: St. Rafael Revival
 ---
 
@@ -7,7 +7,7 @@ title: St. Rafael Revival
       <section class="introduction">
         <div class="introduction__content">
 
-          <h1>Mobilní masáže v Londýně</h1>
+          <h1>Mobile massages in London</h1>
 
           <p>Nechte se namasírovat v pohodlí Vašeho domova.</p>
 
