--- a/sluzby.html
+++ b/sluzby.html
@@ -1,75 +1,74 @@
 ---
-layout: moje-sablona.njk
+layout: moje-sablona_CZ.njk
 title: Služby
 ---
 
-
 <section class="services">
   
-    <h1>Therapies practised</h1>
+    <h1>Poskytuji následující</h1>
 
     <div class="service grid">
-      <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
+      <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Massage 1">
       <div class="service__description--right">
-        <h2>Deep tissue</h2>
-        <p>Deep tissue massage is suitable for all people with problems with mustles of the whole body.</p>
-        <p>One of the most common reasons for people to have a deep tissue massage is the general aches and pains that fall under the broad definition of rheumatic pains, aching joints and muscle spasms.
-        <p>The main underlying cause of many symptoms manifested in the body is stress. </p>
+        <h2>Hloubková masáš</h2>
+        <p>Hloubková masáž je vhodná pro všechny s rozličnými problémy svalů celého těla.</p>
+        <p>Jedním z nejběžnějších důvodů, proč si lidé oblíbili hloubkovou masáž, je zaměření na obecné bolesti spadající pod revmatické bolesti, bolavé klouby a svalové křeče.</p>
+        <p>Hlavním důvodem mnoha z výše uvedených symptomů promítajících se do těla je stres.</p>
       </div>
     </div>
 
     <div class="service grid">
-      <img class="service__image--right" src="/Images/Jaras/Hand_massage.jpg" alt="Masáž 2">
+      <img class="service__image--right" src="/Images/Jaras/Hand_massage.jpg" alt="Massage 2">
       <div class="service__description--left">
-        <h2>Therapeutic massage</h2>
-        <p>Therapeutic massage can help to relieve stress, insomnia, tense muscles and back pain, and is believed by many to improve circulation and digestion, tone the skin and help eliminate toxins.</p>
+        <h2>Terapeutická masáž</h2>
+        <p>Terapeutická masáž pomáhá snižovat stres, bojuje s nespavostí, napětí ve svalech a bolestí zad. Pomáhá zlepšovat krevní oběh a trávení, napíná pokožku a pomáhá odvádět toxiny z těla.</p>
         <p>Music may also be used as an aid to achieving a relaxing treatment.</p>
-        <p>It is recommended for your body, mind and spirit.</p>
+        <p>Doporučujeme ji pro Vaše tělo, mysl i ducha.</p>
       </div>
     </div>
 
     <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Neck_massage.jpg" alt="Masáž 3">
+      <img class="service__image--left" src="/Images/Jaras/Neck_massage.jpg" alt="Massage 3">
       <div class="service__description--right">
-        <h2>India head massage</h2>
-        <p>It is a great stress buster, and although we call it a head massage, we incorporate the back, shoulders and arms.</p>
-        <p>This treatment is good for corporate clients as it is non-invasive and you do not need to remove any clothing.</p>
-        <p>The physical benefits that can be gained: Ease tight muscles, releases shoulders, therefore improving posture.</p>
+        <h2>Indická masáž hlavy</h2>
+        <p>Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy, zahrnujeme i záda, ramena a paže.</p>
+        <p>Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a není třeba se svlékat.</p>
+        <p>Mezi fyzické výhody této masáže patří: uvolnění napjatých svalů, uvolňuje ramena a tím i zlepšuje postoj těla.</p>
       </div>
     </div>
 
     <div class="service grid">
-      <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Masáž 4">
+      <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Massage 4">
       <div class="service__description--left">
-        <h2>Manual lymphatic drainage</h2>
-        <p>This massage is based on Dr. Vodder techniques. Lymphatic drainage massages can benefit people with lymphedema, fibromyalgia, and other conditions.</p>
-        <p>It is a form of gentle massage that encourages the movement of lymph fluids around the body.</p>
-        <p>The fluid in the lymphatic system helps remove waste and toxins from the bodily tissues.</p>
+        <h2>Lymfatická masáš</h2>
+        <p>Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.</p>
+        <p>Jedná se o formu jemné masáže, která podporuje proudění lymfatické tekutiny po těle.</p>
+        <p>Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.</p>
       </div>
     </div>
 
     <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Masáž 5">
+      <img class="service__image--left" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Massage 5">
       <div class="service__description--right">
-        <h2>Prenatal and childbirth massage</h2>
-        <p>I provide support to women during pregnancy and during childbirth.</p>
-        <p>I can not only treat pregnant women with a relaxing massage concentrating on back, belly and feet aches, but I can also teach your partner to provide you with a massage.</p>
-        <p>The most comfortable position for expectant mothers is sideline positioning with supportive, soft cushions used to alleviate the extra strain on the lower back and pelvic areas when the pressure of massage techniques are applied.</p>
+        <h2>Těhotenská a porodní masáž</h2>
+        <p>Poskytuji podporu těhotným ženám a ženám při porodu.</p>
+        <p>Nejen že si mohou těhotné ženy dopřát masáž zaměřenou na bolesti zad, břicha a nohou, ale mohu naučit Vašeho partnera, jak Vás masírovat.</p>
+        <p>Nejpohodlnější polohou pro budoucí rodičky je poloha vleže na boku podepřená polšáři, abychom snížili namáhání zad a pánve.</p>
       </div>
     </div>
 
 
     <h2>Other</h2>
-    <p>I offer many other services such as: </p>
+    <p>Nabízím další služby, jako jsou: </p>
     
     <ul class="other-services">
-      <li>Holistic therapy</li>
-      <li>Ear Candeling</li>
-      <li>Support massage for elderly and people with specific issues</li>
-      <li>Oncology massage (coming soon)</li>
-      <li>Cupping</li>
-      <li>Massage for people with dementia</li>
-      <li>Lessons of baby massages (coming soon)</li>
+      <li>Holistická terapie</li>
+      <li>Voskování uší</li>
+      <li>Masáž pro seniory se specifickými problémy</li>
+      <li>Onkologická masáž (již brzy)</li>
+      <li>Baňkování</li>
+      <li>Masáž pro lidi se stařeckou demencí</li>
+      <li>Výuka masáží miminek (již brzy)</li>
 
     </ul>
 
