--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: St. Rafael Revival
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Malika S.</p>
-                    <p>Jara is neat and skilled. I had a 90 minute massage and it felt relaxing . She is thorough and very good at making sure the pressure feels just right.</p>
+                    <p>Jara je velmi zkušená. Měla jsem s ní 90 minutovou masáž a byla uklidňující. Je pečlivá a vždy se ubezpečí, že vyvíjí takový tlak, aby byl příjemný.</p>
                   </div>
                 </li>
 
@@ -44,14 +44,14 @@ title: St. Rafael Revival
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Maarta C.</p>
-                    <p>Got to know her through a friend who has been saying wonderful things. For years I struggle with backpain, and after only one session, the change is so noticeable. Giving massage with a great care, she listens to body language, adjusting her strengths. Peaceful and healing effects. Magic hands, we like to say. Absolutely wonderful woman, proffesional attitude, great care of higene during Covid. It's a pleasure to invite this woman into your home.</p>
+                    <p>Dostala jsem na ni kontakt přes kamarádku, která o ní říkala skvělé věci. Léta trpím bolestmi zad a již po pár sezeních jsem cítila změnu. Naprosto skvělá žena s profesinálním přístupem, skvělou péčí o hygienu během Covidu.</p>
                   </div>
                 </li>
 
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Emma M.</p>
-                    <p>Slava is truly excellent! Highly recommend her specially her lymphatic drainage and pregnancy massages!</p>
+                    <p>Slava je skutečná úžasná! Velmi ji doporučuji, obzvlášť její lymfatickou masáž a její těhotenské masáže.</p>
                   </div>
                 </li>
               </ul>
