--- a/sluzby.html
+++ b/sluzby.html
@@ -22,7 +22,7 @@ title: Služby
       <div class="service__description--left">
         <h2>Terapeutická masáž</h2>
         <p>Terapeutická masáž pomáhá snižovat stres, bojuje s nespavostí, napětí ve svalech a bolestí zad. Pomáhá zlepšovat krevní oběh a trávení, napíná pokožku a pomáhá odvádět toxiny z těla.</p>
-        <p>Music may also be used as an aid to achieving a relaxing treatment.</p>
+        <p>V pozadí může být puštěna hudba, která napomáhá navodit relaxující atmosféru.</p>
         <p>Doporučujeme ji pro Vaše tělo, mysl i ducha.</p>
       </div>
     </div>
