--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -1,6 +1,6 @@
 ---
 layout: moje-sablona_EN.njk
-title: St. Rafael Revival
+title: St. Raphael Revival
 ---
 
 
@@ -9,20 +9,20 @@ title: St. Rafael Revival
 
           <h1>Mobile massages in London</h1>
 
-          <p>Nechte se namasírovat v pohodlí Vašeho domova.</p>
+          <p>Treat yourself with a massage at your home.</p>
 
-          <p>Jsem mobilní certikovaná masérka, která poskytuje zdravotní, sportovní či těhotenské masáže přizpůsobené Vašim konkrétním potřebám a přáním.</p>
+          <p>I am a mobile certified massage therapist that offers health, sport or prenatal massages tailored to your needs and wishes.</p>
 
-          <p>Brzy budu nabízet i kurzy masáží novorozenců, kdy naučím maminky, jak zahřát a protáhnout tělíčka svých miminek.</p>
+          <p>I will soon offer baby massage lessons when I will teach mothers to warm up and stretch bodies of their babies.</p>
           
-          <p>10% z každé ceny masáže daruji na charitu. Výběr charity je zatím v procesu a bude brzy upřesněna.</p>
+          <p>10% of each massage will be donated to a charity. Selection of a specific charity will be available soon.</p>
         </div>
       </section>
 
       <section class="introduction__testimonials">
-          <h1>Hodnocení klientů</h1>
+          <h1>Testimonials</h1>
 
-          <p>Těší mě, když jsou moji klienti s masážemi spokojeni. Výběr z recenzí si můžete přečíst níže.</p>
+          <p>I am happy when my clients are satisfied with my treatments. A selections of testimonials can be seen below.</p>
 
           <div class="glide">
             <div class="glide__track" data-glide-el="track">
@@ -37,14 +37,14 @@ title: St. Rafael Revival
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Augustína V.</p>
-                    <p>Jaroslava mi vždy udělá úžasnou masáž zad a ramenou. Léta se k ní vracím a vždy jsem naprosto spokojená.</p>
+                    <p>Jaroslava always gives me a great back and shoulders massage. I have been receiving massages from her for years and I am always satisfied.</p>
                   </div>
                 </li>
 
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Maarta C.</p>
-                    <p>Got to know her through a friend who has been saying wonderful things. For years I struggle with backpain, and after only one session, the change is so noticeable. Giving massage with a great care, she listens to body language, adjusting her strengths. Peaceful and healing effects. Magic hands, we like to say. Absolutely wonderful woman, proffesional attitude, great care of higene during Covid. It's a pleasure to invite this woman into your home.</p>
+                    <p>Got to know her through a friend who has been saying wonderful things. For years I struggle with backpain, and after only one session, the change is so noticeable. Absolutely wonderful woman, proffesional attitude, great care of higene during Covid.</p>
                   </div>
                 </li>
 
