Rozchozen glide, netlify, EN verze

--- a/EN/index_en.html
+++ b/EN/index_en.html
@@ -54,8 +54,45 @@ title: St. Raphael Revival
                     <p>Slava is truly excellent! Highly recommend her specially her lymphatic drainage and pregnancy massages!</p>
                   </div>
                 </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Jana E.</p>
+                    <p>I had a massage by Jaroslava through Muscle Whisperer campaign. A friend suggested it and I couldn’t be more grateful. Jaroslava has magic hands which really help my back spasms as well as the rest of the body. Absolutely rejuvenating experience. Would definitely recommend.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Malika S.</p>
+                    <p>Jara is a complete professional who regularly gives me a really good sports massage. I recommend her highly to all those who are looking for one.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Natasha K.</p>
+                    <p>Friendly service. Fantastic quality. Amazing massage. Great value for money.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Danielle A.</p>
+                    <p>Lovely massage everytime. Thank you. Would highly recommend.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Edita K.</p>
+                    <p>As always - very good treatment, Jara has been very thorough, caring and professional. She has been our therapist for almost 3 years. Thank you very much!</p>
+                  </div>
+                </li>
+
               </ul>
             </div>
+
 
             <div class="glide__arrows" data-glide-el="controls">
               <button class="glide__arrow glide__arrow--left" data-glide-dir="<">←</button>
@@ -66,6 +103,12 @@ title: St. Raphael Revival
               <button class="glide__bullet" data-glide-dir="=1"></button>
               <button class="glide__bullet" data-glide-dir="=2"></button>
               <button class="glide__bullet" data-glide-dir="=3"></button>
+              <button class="glide__bullet" data-glide-dir="=4"></button>
+              <button class="glide__bullet" data-glide-dir="=5"></button>
+              <button class="glide__bullet" data-glide-dir="=6"></button>
+              <button class="glide__bullet" data-glide-dir="=7"></button>
+              <button class="glide__bullet" data-glide-dir="=8"></button>
+              <button class="glide__bullet" data-glide-dir="=9"></button>
             </div>
 
           </div>
