--- a/index.html
+++ b/index.html
@@ -51,9 +51,46 @@ title: St. Rafael Revival
                 <li class="glide__slide">
                   <div class="testimonials__selection">
                     <p class="testimonials__name">Emma M.</p>
-                    <p>Slava je skutečná úžasná! Velmi ji doporučuji, obzvlášť její lymfatickou masáž a její těhotenské masáže.</p>
+                    <p>Slava je skutečně úžasná! Velmi ji doporučuji, obzvlášť její lymfatickou masáž a její těhotenské masáže.</p>
                   </div>
                 </li>
+
+                
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Jana E.</p>
+                    <p>Nechala jsem se Jaroslavou namasírovat během kapmaně "Mustle Whisperer". Kamarádka mi to doporučila a jsem velmi vděčná. Jaroslava má kouzelné ruce a opravdu pomáhá mým křečím v zádech a ve zbytku těla. Zcela omlazující zážitek. Rozhodně doporučuji.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Malika S.</p>
+                    <p>Jara je naprostý profesionál, který mi pravidelně poskytuje moc dobré sportovní masáže. Těm, kteří hledají maséra, ji velmi doporučuji.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Natasha K.</p>
+                    <p>Přátelská služba. Báječná kvalita. Úžasná masáže. Skvělý poměr ceny a kvality.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Danielle A.</p>
+                    <p>Pokaždé příjemná masáž. Děkuji. Velmi doporučuji.</p>
+                  </div>
+                </li>
+
+                <li class="glide__slide">
+                  <div class="testimonials__selection">
+                    <p class="testimonials__name">Edita K.</p>
+                    <p>Jako vždy - velmi dobrá masáž, Jara byla velmi pečlivá, pečující a profesionální.Je naší masérkou již skoro 3 roky. Moc děkujeme!</p>
+                  </div>
+                </li>
+
               </ul>
             </div>
 
@@ -66,6 +103,12 @@ title: St. Rafael Revival
               <button class="glide__bullet" data-glide-dir="=1"></button>
               <button class="glide__bullet" data-glide-dir="=2"></button>
               <button class="glide__bullet" data-glide-dir="=3"></button>
+              <button class="glide__bullet" data-glide-dir="=4"></button>
+              <button class="glide__bullet" data-glide-dir="=5"></button>
+              <button class="glide__bullet" data-glide-dir="=6"></button>
+              <button class="glide__bullet" data-glide-dir="=7"></button>
+              <button class="glide__bullet" data-glide-dir="=8"></button>
+              <button class="glide__bullet" data-glide-dir="=9"></button>
             </div>
 
           </div>
