mobilni verze footer

--- a/sluzby.html
+++ b/sluzby.html
@@ -10,7 +10,7 @@ title: Služby
     <div class="service grid">
       <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Massage 1">
       <div class="service__description--right">
-        <h2>Hloubková masáš</h2>
+        <h2>Hloubková masáž</h2>
         <p>Hloubková masáž je vhodná pro všechny s rozličnými problémy svalů celého těla.</p>
         <p>Jedním z nejběžnějších důvodů, proč si lidé oblíbili hloubkovou masáž, je zaměření na obecné bolesti spadající pod revmatické bolesti, bolavé klouby a svalové křeče.</p>
         <p>Hlavním důvodem mnoha z výše uvedených symptomů promítajících se do těla je stres.</p>
@@ -40,7 +40,7 @@ title: Služby
     <div class="service grid">
       <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Massage 4">
       <div class="service__description--left">
-        <h2>Lymfatická masáš</h2>
+        <h2>Lymfatická masáž</h2>
         <p>Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.</p>
         <p>Jedná se o formu jemné masáže, která podporuje proudění lymfatické tekutiny po těle.</p>
         <p>Lymfatický systém pomáhá odstraňovat škodlivé látky a toxiny z těla.</p>
@@ -58,7 +58,7 @@ title: Služby
     </div>
 
 
-    <h2>Other</h2>
+    <h2>Další</h2>
     <p>Nabízím další služby, jako jsou: </p>
     
     <ul class="other-services">
