zmena gridu na flex

--- a/sluzby.html
+++ b/sluzby.html
@@ -7,9 +7,9 @@ title: Služby
   
     <h1>Poskytuji následující</h1>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Massage 1">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Massage 1">
+      <div class="service__description">
         <h2>Hloubková masáž</h2>
         <p>Hloubková masáž je vhodná pro všechny s rozličnými problémy svalů celého těla.</p>
         <p>Jedním z nejběžnějších důvodů, proč si lidé oblíbili hloubkovou masáž, je zaměření na obecné bolesti spadající pod revmatické bolesti, bolavé klouby a svalové křeče.</p>
@@ -17,9 +17,9 @@ title: Služby
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--right" src="/Images/Jaras/Hand_massage.jpg" alt="Massage 2">
-      <div class="service__description--left">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Hand_massage.jpg" alt="Massage 2">
+      <div class="service__description">
         <h2>Terapeutická masáž</h2>
         <p>Terapeutická masáž pomáhá snižovat stres, bojuje s nespavostí, napětí ve svalech a bolestí zad. Pomáhá zlepšovat krevní oběh a trávení, napíná pokožku a pomáhá odvádět toxiny z těla.</p>
         <p>V pozadí může být puštěna hudba, která napomáhá navodit relaxující atmosféru.</p>
@@ -27,9 +27,9 @@ title: Služby
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Neck_massage.jpg" alt="Massage 3">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Neck_massage.jpg" alt="Massage 3">
+      <div class="service__description">
         <h2>Indická masáž hlavy</h2>
         <p>Velmi pomáhá snižovat stres a ačkoliv se nazývá masáž hlavy, zahrnujeme i záda, ramena a paže.</p>
         <p>Tato masáž je vhodná pro firemní klienty, jelikož není invazivní a není třeba se svlékat.</p>
@@ -37,9 +37,9 @@ title: Služby
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Massage 4">
-      <div class="service__description--left">
+    <div class="service">
+      <img class="service__image" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Massage 4">
+      <div class="service__description">
         <h2>Lymfatická masáž</h2>
         <p>Tato masáž je založena na technice Dr. Voddera. Lymfatická masáž pomáhá lidem s lymfedémem, fibromyalgií a dalšími zdravotními problémy.</p>
         <p>Jedná se o formu jemné masáže, která podporuje proudění lymfatické tekutiny po těle.</p>
@@ -47,9 +47,9 @@ title: Služby
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Massage 5">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Massage 5">
+      <div class="service__description">
         <h2>Těhotenská a porodní masáž</h2>
         <p>Poskytuji podporu těhotným ženám a ženám při porodu.</p>
         <p>Nejen že si mohou těhotné ženy dopřát masáž zaměřenou na bolesti zad, břicha a nohou, ale mohu naučit Vašeho partnera, jak Vás masírovat.</p>
