--- a/EN/services.html
+++ b/EN/services.html
@@ -8,9 +8,9 @@ title: Services
   
     <h1>Therapies practised</h1>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Downloaded/massage-2768833_1920.jpg" alt="Masáž 1">
+      <div class="service__description">
         <h2>Deep tissue</h2>
         <p>Deep tissue massage is suitable for all people with problems with mustles of the whole body.</p>
         <p>One of the most common reasons for people to have a deep tissue massage is the general aches and pains that fall under the broad definition of rheumatic pains, aching joints and muscle spasms.</p>
@@ -18,9 +18,9 @@ title: Services
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--right" src="/Images/Jaras/Hand_massage.jpg" alt="Masáž 2">
-      <div class="service__description--left">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Hand_massage.jpg" alt="Masáž 2">
+      <div class="service__description">
         <h2>Therapeutic massage</h2>
         <p>Therapeutic massage can help to relieve stress, insomnia, tense muscles and back pain, and is believed by many to improve circulation and digestion, tone the skin and help eliminate toxins.</p>
         <p>Music may also be used as an aid to achieving a relaxing treatment.</p>
@@ -28,9 +28,9 @@ title: Services
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Neck_massage.jpg" alt="Masáž 3">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Neck_massage.jpg" alt="Masáž 3">
+      <div class="service__description">
         <h2>India head massage</h2>
         <p>It is a great stress buster, and although we call it a head massage, we incorporate the back, shoulders and arms.</p>
         <p>This treatment is good for corporate clients as it is non-invasive and you do not need to remove any clothing.</p>
@@ -38,9 +38,9 @@ title: Services
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--right" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Masáž 4">
-      <div class="service__description--left">
+    <div class="service">
+      <img class="service__image" src="/Images/Downloaded/physio-1778029_1920.jpg" alt="Masáž 4">
+      <div class="service__description">
         <h2>Manual lymphatic drainage</h2>
         <p>This massage is based on Dr. Vodder techniques. Lymphatic drainage massages can benefit people with lymphedema, fibromyalgia, and other conditions.</p>
         <p>It is a form of gentle massage that encourages the movement of lymph fluids around the body.</p>
@@ -48,9 +48,9 @@ title: Services
       </div>
     </div>
 
-    <div class="service grid">
-      <img class="service__image--left" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Masáž 5">
-      <div class="service__description--right">
+    <div class="service">
+      <img class="service__image" src="/Images/Jaras/Pregnancy_massage.jpg" alt="Masáž 5">
+      <div class="service__description">
         <h2>Prenatal and childbirth massage</h2>
         <p>I provide support to women during pregnancy and during childbirth.</p>
         <p>I can not only treat pregnant women with a relaxing massage concentrating on back, belly and feet aches, but I can also teach your partner to provide you with a massage.</p>
